# jtracer

./: .gitignore  240p128s.ppm  240p16s.ppm  240p16s1.ppm  240p16s132257ms.ppm  240p2048s258307ms.ppm  240p4s.ppm  480p128s.ppm  480p4s.ppm  CMakeLists.txt  README.md  main.cpp  output.ppm  test1.ppm  test2.ppm
RayTraceCPU/: main.cpp
RayTraceCPU.xcodeproj/: project.pbxproj
RayTraceCPU.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
outputs/: 480p16s-11hr.ppm  480p16s.ppm  480p4s.ppm  480p8192s-3-3.ppm  480p8192s.ppm  720p-4096s.ppm  world1-16spp.ppm  world1-4spp.ppm  world1-8spp.ppm  world2-16spp.ppm  world2-4spp.ppm  world2-8spp.ppm  world5-16spp.ppm  world5-4spp.ppm  world5-8spp.ppm
scripts/: compare.py  denoise.sh  invert.py
src/: CMakeLists.txt  main.cpp
src/debug/: CMakeLists.txt  bar.cpp  bar.hpp
src/materials/: CMakeLists.txt  beckspizz.cpp  beckspizz.hpp  brdf.cpp  brdf.hpp  lambertian.cpp  lambertian.hpp  materials.hpp  torrancesparrow.cpp  torrancesparrow.hpp
src/materials/fresnels/: CMakeLists.txt  fresnel.cpp  fresnel.hpp
src/materials/microfacets/: CMakeLists.txt  beckmannspizzichino.cpp  beckmannspizzichino.hpp  microfacetdistribution.cpp  microfacetdistribution.hpp
src/math/: CMakeLists.txt  color.cpp  color.hpp  mat3x3.cpp  mat3x3.hpp  math.cpp  math.hpp  ray.hpp  rayhit.cpp  rayhit.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
src/primatives/: CMakeLists.txt  box.cpp  box.hpp  primative.cpp  primative.hpp  primatives.hpp  sphere.cpp  sphere.hpp
src/renderer/: CMakeLists.txt  camera.hpp  screen.cpp  screen.hpp
(+36 files in other folders)
